[package]
name = "embedded-websocket"
version = "0.9.3"
authors = ["David Haig"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ninjasource/embedded-websockets.git"
description = "A lightweight websocket library for embedded systems (no_std)"
keywords = ["websockets", "websocket", "embedded", "no_std"]
categories = ["embedded", "no-std", "network-programming"]
readme = "README.md"

[dependencies]
sha1 = { version = "0.10.6", default-features = false }
heapless = { version = "0.8.0", default-features = false }
byteorder = { version = "1.5.0", default-features = false }
httparse = { version = "1.9.4", default-features = false }
rand_core = { version = "0.6.4", default-features = false }
base64 = { version = "0.22.1", default-features = false }
embassy-net = { version = "0.4.0", default-features = false, features = ["tcp", "proto-ipv4", "medium-ip"] }
embedded-io-async = "0.6.1"

[dev-dependencies]
rand = "0.8.5"
bytes = "1.4.0"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.8", features = ["net", "codec"] }

[features]
default = []
std = ["httparse/std"]
